Revert "Latest code as on 18th May 2019"
This reverts commit a66e7b2ee6d3afa21bbb39fa381e7351ecc48d83.

--- a/src/classes/AssociateParticipantsBatchService.cls
+++ b/src/classes/AssociateParticipantsBatchService.cls
@@ -5,9 +5,9 @@
  * Description: Service class for AssociateParticipantsBatch - It will Associate participants to any sequnce - In case if (total number participants to be associated to sequence > max size)
 **/
 public class AssociateParticipantsBatchService {
-	static Integer MAX_RECORDS_UPDATE_LIMIT = 9900; 
+	static Integer MAX_RECORDS_UPDATE_LIMIT = 9999; 
 	
-    public static void associateParticipantsToSequence(Id sequenceId, Map<Id, Cadence__c> sequenceIdToSequenceMap, List<SObject> participantList, List<SObject> participantListToUpdate, String sequenceRecordType) {
+    public static void associateParticipantsToSequence(Id sequenceId, Map<Id, Cadence__c> sequenceIdToSequenceMap, List<SObject> participantList, List<SObject> participantListToUpdate) {
 		
 		Map<Id, List<CadenceAction__c>> particiapntIdToSequenceActionListMap = new Map<Id, List<CadenceAction__c>>();
 		
@@ -23,11 +23,8 @@ public class AssociateParticipantsBatchService {
 			participantListToUpdate.add(participant);
 		}
 		
-		if(participantListToUpdate !=  null && participantListToUpdate.size() < 9900) {
-			SequenceEngineService.disableParticipantTrigger(sequenceRecordType);
+		if(participantListToUpdate !=  null && participantListToUpdate.size() > 9999) {
 			Database.update(participantListToUpdate, false);
-			SequenceEngineService.enableParticipantTrigger(); 
-			
 			participantListToUpdate = new List<SObject>();
 		} 
 	}
