--- a/src/classes/ContactService.cls
+++ b/src/classes/ContactService.cls
@@ -1,11 +1,10 @@
 public class ContactService implements IParticipant { 
-      
+    
     public static String nameSpace = CadenceConstants.NAMESPACE;
         
     public Map<Id, Set<Id>> getSequenceHistory()  
     {
-    	//Need to remove commented code
-    	/**Map<Id, Set<Id>> contactIdToSequenceActionsIdSetMap = new Map<Id, Set<Id>>();
+    	Map<Id, Set<Id>> contactIdToSequenceActionsIdSetMap = new Map<Id, Set<Id>>();
         Set<Id> sequenceIds;        
         List<Sequence_Action__c> sequenceActionAllContacts = [select Id, Contact_Id__c from Sequence_Action__c 
                                                                          where Contact_Id__c != null];    
@@ -18,34 +17,23 @@ public class ContactService implements IParticipant {
            }                       
            contactIdToSequenceActionsIdSetMap.get(sequenceAction.Contact_Id__c).add(sequenceAction.Id);             
         }  
-    	return contactIdToSequenceActionsIdSetMap;*/
-    	Map<Id, Set<Id>> participantIdToSequenceIdHistorySetMap = new Map<Id, Set<Id>>();
-    	for(Participant_Sequence_History__c participantSequenceHistory : [SELECT Contact_Id__c, Sequence_Id__c FROM Participant_Sequence_History__c WHERE Contact_Id__c != null]) {
-           
-           if(!participantIdToSequenceIdHistorySetMap.containsKey(participantSequenceHistory.Contact_Id__c))
-           {
-           	  participantIdToSequenceIdHistorySetMap.put(participantSequenceHistory.Contact_Id__c, new Set<Id>());
-           }                       
-           participantIdToSequenceIdHistorySetMap.get(participantSequenceHistory.Contact_Id__c).add(participantSequenceHistory.Id);             
-        }  
-    	return participantIdToSequenceIdHistorySetMap;
+    	return contactIdToSequenceActionsIdSetMap;
     }
 			
 	//return participant with matching criteria
-	public SequenceEngineWrapper checkExitCriteria(string participantType, List<SObject> participnatList, List<SObject> parentParticipantList, Map<Id, Cadence__c> sequenceMap)
+	public List<SObject> checkExitCriteria(string participantType, List<SObject> participnatList, Map<Id, Cadence__c> sequenceMap)
 	{
-		SequenceEngineWrapper sequenceEngineWrapper = new SequenceEngineWrapper();
-		sequenceEngineWrapper.participantList = SequenceEngineHelper.getParticipantsWithMatchingExitCriteria(participantType, participnatList, sequenceMap);
-		 	
-		return sequenceEngineWrapper;
+		List<SObject> lstParticipants = new List<Sobject>();	
+		lstParticipants = SequenceEngineHelper.getParticipantsWithMatchingExitCriteria(participantType, participnatList, sequenceMap);		
+		return lstParticipants;		
 	}	
 		
-	public static List<SObject> unAssociateParticipants(SequenceEngineWrapper sequenceEngineWrapper, string participantType)
+	public static List<SObject> unAssociateParticipants(List<SObject> participantListWithMatchedExitCriteria, string participantType)
     {
     	List<Participant_Sequence_History__c> newSequenceHistory = new List<Participant_Sequence_History__c>();
     	List<SObject> unAssociatedParticipantList = new List<Sobject>(); 
     	
-    	for(SObject participant : sequenceEngineWrapper.participantList)
+    	for(SObject participant : participantListWithMatchedExitCriteria)
     	{
 																					
     		Id sequenceId = (Id)participant.get(nameSpace+'Cadence_Id__c'); 
@@ -63,18 +51,23 @@ public class ContactService implements IParticipant {
     	return unAssociatedParticipantList;
     }
 		
-	public Map<Id, List<SObject>> checkEntryCriteria(List<SObject> participantList, List<SObject> parentParticipantList, Map<Id, Cadence__c> sequenceIdToSequenceMap, Map<Id, Set<Id>> participantIdToSequenceIdHistorySetMap)
+	public Map<Id, List<SObject>> checkEntryCriteria(List<SObject> participantList, Map<Id, Cadence__c> sequenceIdToSequenceMap, Map<Id, Set<Id>> participantIdToSequenceIdHistorySetMap)
 	{
-		Map<Id, List<SObject>> sequenceIdToParticipationListMap = New Map<Id, List<SObject>>();
+		Map<Id, List<SObject>> sequenceIdToParticipationListMap;
   
+																				 
+															 
+   
+														  
+   
+																																				 
+	 
+	
 		Map<Id, CriterionSet> sequenceIdToSequenceCriteriasMap = RuleCriterionMatcherHelper.getCadenceWiseCriterions(sequenceIdToSequenceMap.values(), CadenceConstants.CRITERION_TYPE_ENTRY);
 		Map<Id, CriterionSet> sequenceIdToExitSequenceCriteriasMap = RuleCriterionMatcherHelper.getCadenceWiseCriterions(sequenceIdToSequenceMap.values(), CadenceConstants.CRITERION_TYPE_EXIT);
 		Boolean isCriterionMatches = false;
 		for(SObject participant : participantList)
 		{	
-			if (participant.get(nameSpace+'Cadence_Id__c') != null ){
-				continue;
-			}
 			for(Id sequenceId :  sequenceIdToSequenceMap.keySet())
 			{
 				If(participantIdToSequenceIdHistorySetMap.containsKey(participant.Id) && participantIdToSequenceIdHistorySetMap.get(participant.Id).contains(sequenceId))
@@ -82,14 +75,14 @@ public class ContactService implements IParticipant {
 				  continue;
 				}
 				
-				If(RuleCriterionMatcherHelper.cadenceCriterionMatches(participant, null, sequenceIdToExitSequenceCriteriasMap.get(sequenceId), null))
+				If(RuleCriterionMatcherHelper.cadenceCriterionMatches(participant, null, sequenceIdToExitSequenceCriteriasMap.get(sequenceId)))
 				{
 				  continue;
 				}
 				
 				if(sequenceIdToSequenceCriteriasMap.containsKey(sequenceId))
 				{
-					isCriterionMatches = RuleCriterionMatcherHelper.cadenceCriterionMatches(participant, null, sequenceIdToSequenceCriteriasMap.get(sequenceId), null);
+					isCriterionMatches = RuleCriterionMatcherHelper.cadenceCriterionMatches(participant, null, sequenceIdToSequenceCriteriasMap.get(sequenceId));
 					if(isCriterionMatches) {
 						if(!sequenceIdToParticipationListMap.containsKey(sequenceId))
 						{
@@ -134,7 +127,7 @@ public class ContactService implements IParticipant {
 			if(activeSequenceIdToSequenceMap.containsKey(contact.Cadence_Id__c))
 			{
 				//--to do to check execution Date calculation
-				DateTime entranceDate = System.now();
+				DateTime entranceDate = contact.EntranceCriteria_Matched_Date__c;
 				Integer day = 0, hour = 0;
 				//--to do to check end
 				for(CadenceAction__c sequenceAction :  activeSequenceIdToSequenceMap.get(contact.Cadence_Id__c).CadenceActions__r)
@@ -164,9 +157,12 @@ public class ContactService implements IParticipant {
 	}
 	
 	public Map<Id, List<Sequence_Action__c>> performParticipantActions(List<sObject> participantListToPerformParticipantAction, Map<Id, List<Sequence_Action__c>> participantIdToUnperformedParticipantActionsMap, Map<Id, Cadence__c> activeSequenceIdToSequenceMap, string participantType)
-	{	
+	{	 
+		//List<SObject>, Map<Id,List<Sequence_Action__c>>, Map<Id,SObject>, Map<Id,Cadence__c>, String)
+		//List<sObject>  Map<Id, List<Sequence_Action__c>> , Map<Id, SObject> , Map<Id, Cadence__c>, string participantType
+		
 		Map<Id, List<Sequence_Action__c>> participantIdToSequenceActionsToPerformMap =  SequenceEngineHelper.getTopMostUnPerformedParticipantActions(participantListToPerformParticipantAction, participantIdToUnperformedParticipantActionsMap, null, activeSequenceIdToSequenceMap, participantType);
-		//participantIdToUnperformedParticipantActionsMap = participantIdToSequenceActionsToPerformMap;		
+		participantIdToUnperformedParticipantActionsMap = participantIdToSequenceActionsToPerformMap;		
 			
 		Map<Id, List<Sequence_Action__c>> participantIdToPerformedParticipantActionsMap = new Map<Id, List<Sequence_Action__c>>();	
 		Map<Id, List<Sequence_Action__c>> participantIdToRemainingParticipantActionsMap = new Map<Id, List<Sequence_Action__c>>();	
@@ -250,6 +246,10 @@ public class ContactService implements IParticipant {
                     participationAction.Show_on_Target_List__c = true;
                     participationAction.isActionPerformed__c = false;
                     participantActionToUpdate.add(participationAction);
+                    /**if(participantIdToPerformedParticipantActionsMap.containsKey(participantId)) {
+                       participantIdToPerformedParticipantActionsMap.put(participantId, new List<Sequence_Action__c>());
+                    }
+                    participantIdToPerformedParticipantActionsMap.get(participantId).add(participationAction);  **/
                 }
         	}
         } 
@@ -283,12 +283,22 @@ public class ContactService implements IParticipant {
         return participantIdToPerformedParticipantActionsMap;        
 	}
 	
-	public List<SObject> updateParticipantFields(List<sObject> participantListToPerformParticipantAction, Map<Id, List<Sequence_Action__c>> participantIdToPerformedParticipantActionsMap, List<SObject> parentParticipantList, string participantType, boolean isTrigger)
+	public List<SObject> getParticipantListForFieldsUpdate(List<sObject> participantListToPerformParticipantAction, Map<Id, List<Sequence_Action__c>> participantIdToPerformedParticipantActionsMap, string participantType, boolean isTrigger)
 	{		
 		//Returning if list is empty		
         if(participantIdToPerformedParticipantActionsMap == null || participantIdToPerformedParticipantActionsMap.isEmpty()) {
             return new List<SObject>();
         }     
+        
+        //--to do , can remove the if condition with sObjectList?   
+        //Handling after update triggers 
+        /** List<SObject> sObjectList = new List<SObject>();
+        if (isTrigger){
+            for(SObject participant : participantListToPerformParticipantAction) {               
+                    sObjectList.add(new Lead(Id=(Id)participant.get('Id')));               
+            }
+            participantListToPerformParticipantAction = sObjectList;
+        } **/
         
         Map<Id, SObject> participantIdToParticipantMapToUpdate = new Map<Id, SObject>();
         Map<Id, SObject> participantIdToParticipantMap = new Map<Id, SObject>(participantListToPerformParticipantAction);
@@ -304,7 +314,26 @@ public class ContactService implements IParticipant {
         //Gettting participant action list 
         for(Id participantId : participantIdToPerformedParticipantActionsMap.keySet()) {
             participantActionList.addAll(participantIdToPerformedParticipantActionsMap.get(participantId));
-        } 		    
+        } 		
+        
+        /**
+        Boolean isOpportuityType = false;
+        List<String> opportunityIdList = new List<String>();
+        for(Sequence_Action__c participantAction : participantActionList) {
+            if(participantAction.Cadence_Type__c == CadenceConstants.OPPORTUNITY_OBJECT_NAME){
+                isOpportuityType = true;
+                break;
+            }
+        } 
+        
+        if(isOpportuityType){
+            opportunityFieldDataTypeMap = CadenceUtil.getObjectFieldsType(CadenceConstants.OPPORTUNITY_OBJECT_NAME);
+            for(SObject obj : participantListToPerformParticipantAction){
+                opportunityIdList.add(String.valueOf(obj.get('Opportunity_Id__c')));
+            }
+            opportunityList = CadenceSelector.getOpportunity(opportunityIdList,CadenceConstants.OPPORTUNITY_OBJECT_NAME);
+            opportunityMap = new Map<Id, SObject>(opportunityList);
+        } **/
         
         //Updating the obj fields 
         for(Sequence_Action__c participantAction : participantActionList) {
@@ -329,15 +358,24 @@ public class ContactService implements IParticipant {
                 participantIdToParticipantMapToUpdate.put(contactId, participantWithUpdatedFieldsValues);					
             }
         }
+        /**
+        if(opportunityList != null && opportunityList.size() > 0){
+           Database.SaveResult[] results = Database.update(opportunityList, false);
+        }**/
         return participantIdToParticipantMapToUpdate.values();
 	}
 	
-	public void updateParticipants(List<SObject> participantListToPerformParticipantAction, List<SObject> participantListToUpdateFields, boolean isTrigger)
-	{	
+	public void updateParticipantFields(List<SObject> participantListToPerformParticipantAction, List<SObject> participantListToUpdateFields, boolean isTrigger)
+	{
+		/**ParticipantsToProcess participantsToProcess = new ParticipantsToProcess();
+		participantsToProcess.participantsToUpdate = participantListToUpdateFields;
+		participantsToProcess.allParticipantsToProcess = participantListToPerformParticipantAction; **/
+		
 		if(!isTrigger) {
             Database.UpsertResult [] upsertResult;
             try{
                 Set<SObject> listToUpdateParticipants = new Set<SObject>();
+                //listToUpdateParticipants.addAll(participantsToProcess.participantsToUpdate);
                 
                 listToUpdateParticipants.addAll(participantListToPerformParticipantAction);
                 if(participantListToUpdateFields != null){
