--- a/src/classes/PerformCadenceActionBatchHelper.cls
+++ b/src/classes/PerformCadenceActionBatchHelper.cls
@@ -5,7 +5,7 @@ public class PerformCadenceActionBatchHelper {
 		} else if(participantType == CadenceConstants.LEAD_OBJECT_NAME) {
 			return formLeadSelectQuery(getParticipantTypeToParentObjectListMap().get(CadenceConstants.LEAD_OBJECT_NAME));
 		} else if(participantType == CadenceConstants.OPPORTUNITY_OBJECT_NAME) {
-			return formOpportunityContactSelectQuery(getParticipantTypeToParentObjectListMap().get(CadenceConstants.OPPORTUNITY_OBJECT_NAME));
+			return formOpportunityContactSelectQuery(new list<String>());
 		}
 		return '';
 	} 
@@ -15,7 +15,18 @@ public class PerformCadenceActionBatchHelper {
 		Map <String, Schema.SObjectType> globalDescribedSchemaMap = Schema.getGlobalDescribe();
 		List<Schema.SObjectField> contactFieldList = getFieldListFromGlobalDescribedSchemaMap(globalDescribedSchemaMap, 'Contact');
 		
-		query = addFieldsInQuery(query, globalDescribedSchemaMap, contactFieldList, participantTypeToParentObjectList);
+		for(Schema.SObjectField contactField : contactFieldList) {
+			query += contactField.getDescribe().getname() + ',';
+		}
+		
+		List<Schema.SObjectField> parentObjectFieldList;
+		for(String parentObjectName : participantTypeToParentObjectList) {
+			parentObjectFieldList = getFieldListFromGlobalDescribedSchemaMap(globalDescribedSchemaMap, parentObjectName);
+		
+			for(Schema.SObjectField parentObjectField : parentObjectFieldList) {
+				query += parentObjectName + '.' + parentObjectField.getDescribe().getname() + ',';
+			}
+		}
 		
 		query = query.subString(0, query.length() - 1);
 		query += ' From Contact WHERE Cadence_ID__c != null AND Opportunity_Id__c = null';
@@ -27,7 +38,18 @@ public class PerformCadenceActionBatchHelper {
 		Map <String, Schema.SObjectType> globalDescribedSchemaMap = Schema.getGlobalDescribe();
 		List<Schema.SObjectField> leadFieldList = getFieldListFromGlobalDescribedSchemaMap(globalDescribedSchemaMap, 'Lead');
 		
-		query = addFieldsInQuery(query, globalDescribedSchemaMap, leadFieldList, participantTypeToParentObjectList);
+		for(Schema.SObjectField leadField : leadFieldList) {
+			query += leadField.getDescribe().getname() + ',';
+		}
+		
+		List<Schema.SObjectField> parentObjectFieldList;
+		for(String parentObjectName : participantTypeToParentObjectList) {
+			parentObjectFieldList = getFieldListFromGlobalDescribedSchemaMap(globalDescribedSchemaMap, parentObjectName);
+		
+			for(Schema.SObjectField parentObjectField : parentObjectFieldList) {
+				query += parentObjectName + '.' + parentObjectField.getDescribe().getname() + ',';
+			}
+		}
 		
 		query = query.subString(0, query.length() - 1);
 		query += ' From Lead WHERE Cadence_ID__c != null';
@@ -37,44 +59,32 @@ public class PerformCadenceActionBatchHelper {
 	private static String formOpportunityContactSelectQuery(list<String> participantTypeToParentObjectList) {
 		String query = 'Select ';
 		Map <String, Schema.SObjectType> globalDescribedSchemaMap = Schema.getGlobalDescribe();
-		List<Schema.SObjectField> opportunityFieldList = getFieldListFromGlobalDescribedSchemaMap(globalDescribedSchemaMap, 'Opportunity');
+		List<Schema.SObjectField> contactFieldList = getFieldListFromGlobalDescribedSchemaMap(globalDescribedSchemaMap, 'Contact');
 		
-		query = addFieldsInQuery(query, globalDescribedSchemaMap, opportunityFieldList, participantTypeToParentObjectList);
-		
-		query += ' (Select ContactId, OpportunityId, Role From OpportunityContactRoles)';
-		query += ' From Opportunity WHERE Cadence_ID__c != null AND Id IN (Select OpportunityId From OpportunityContactRole)';
-		return query;
-	}
-	
-	public static List<Schema.SObjectField> getFieldListFromGlobalDescribedSchemaMap(Map <String, Schema.SObjectType> globalDescribedSchemaMap, String objectName) {
-		List<Schema.SObjectField> fieldList = globalDescribedSchemaMap.get(objectName).getDescribe().fields.getMap().values();
-		return fieldList;
-	}
-	
-	public static String addFieldsInQuery(String query, Map <String, Schema.SObjectType> globalDescribedSchemaMap, 
-											List<Schema.SObjectField> fieldList, list<String> participantTypeToParentObjectList) {
-		for(Schema.SObjectField field : fieldList) {
-			if (!field.getDescribe().isAccessible()) {
-				continue; 
-			}
-			query += field.getDescribe().getname() + ',';
-		}
+		for(Schema.SObjectField contactField : contactFieldList) {
+			query += contactField.getDescribe().getname() + ',';
+		} 
 		
 		List<Schema.SObjectField> parentObjectFieldList;
 		for(String parentObjectName : participantTypeToParentObjectList) {
 			parentObjectFieldList = getFieldListFromGlobalDescribedSchemaMap(globalDescribedSchemaMap, parentObjectName);
 		
 			for(Schema.SObjectField parentObjectField : parentObjectFieldList) {
-				if (!parentObjectField.getDescribe().isAccessible()) {
-					continue; 
-				}
 				query += parentObjectName + '.' + parentObjectField.getDescribe().getname() + ',';
 			}
 		}
+		
+		query = query.subString(0, query.length() - 1);
+		query += ' From Contact WHERE Cadence_ID__c != null AND Opportunity_Id__c != null';
 		return query;
 	}
 	
-	public static Map<String, list<String>> getParticipantTypeToParentObjectListMap() {
+	private static List<Schema.SObjectField> getFieldListFromGlobalDescribedSchemaMap(Map <String, Schema.SObjectType> globalDescribedSchemaMap, String objectName) {
+		List<Schema.SObjectField> fieldList = globalDescribedSchemaMap.get(objectName).getDescribe().fields.getMap().values();
+		return fieldList;
+	}
+	
+	private static Map<String, list<String>> getParticipantTypeToParentObjectListMap() {
 		Map<String, list<String>> participantTypeToParentGroupsListMap = new Map<String, list<String>>{
 																										CadenceConstants.CONTACT_OBJECT_NAME => new list<String>(),
 																										CadenceConstants.LEAD_OBJECT_NAME => new list<String>(),
@@ -97,38 +107,5 @@ public class PerformCadenceActionBatchHelper {
 			participantTypeToParentGroupsListMap.get(CadenceConstants.OPPORTUNITY_OBJECT_NAME).add(CadenceConstants.PRICE_BOOK_OBJECT_NAME);
 		}	
 		return participantTypeToParentGroupsListMap;
-	}
-	
-	public static List<Contact> getContactsRelatedToOpportunities(List<Opportunity> opportunityList) {
-		List<String> participantTypeToParentObjectList = getParticipantTypeToParentObjectListMap().get(CadenceConstants.CONTACT_OBJECT_NAME);
-		
-		Set<Id> contactIdSet = new Set<Id>();
-		for(Opportunity opportunity : opportunityList) {
-			if(opportunity.OpportunityContactRoles != null) {
-				for(OpportunityContactRole opportunityContactRole : opportunity.OpportunityContactRoles) {
-					contactIdSet.add(opportunityContactRole.ContactId);
-				}
-			}
-		}
-		String query = 'Select ';
-		Map <String, Schema.SObjectType> globalDescribedSchemaMap = Schema.getGlobalDescribe();
-		List<Schema.SObjectField> contactFieldList = getFieldListFromGlobalDescribedSchemaMap(globalDescribedSchemaMap, 'Contact');
-		
-		for(Schema.SObjectField contactField : contactFieldList) {
-			query += contactField.getDescribe().getname() + ',';
-		}
-		
-		List<Schema.SObjectField> parentObjectFieldList;
-		for(String parentObjectName : participantTypeToParentObjectList) {
-			parentObjectFieldList = getFieldListFromGlobalDescribedSchemaMap(globalDescribedSchemaMap, parentObjectName);
-		
-			for(Schema.SObjectField parentObjectField : parentObjectFieldList) {
-				query += parentObjectName + '.' + parentObjectField.getDescribe().getname() + ',';
-			}
-		}
-		
-		query = query.subString(0, query.length() - 1);
-		query += ' From Contact WHERE Cadence_ID__c != null AND ID IN : contactIdSet Limit' + SequenceEngineHelper.getAvailableQueryRowsLimit();
-		return DataBase.query(query);
 	}
 }
